# Network_Security_Model

./: .env  README.md  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_mongo_db.py
Artifacts/06_13_2025_13_47_25/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_13_2025_13_47_59/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_13_2025_13_49_17/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_14_35_02/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_17_36_35/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_17_37_25/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_17_38_30/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_17_39_28/data_ingestion/ingested/: test.csv  train.csv
Artifacts/06_18_2025_17_40_07/data_ingestion/ingested/: test.csv
Artifacts/06_18_2025_17_40_07/data_validation/drift_report/: report.yaml
Artifacts/06_18_2025_17_40_07/data_validation/validated/: train.csv
Artifacts/07_08_2025_17_55_57/data_ingestion/ingested/: test.csv  train.csv
Network_Security_Project.egg-info/: PKG-INFO  SOURCES.txt
networksecurity/components/: artifact_entity.py  data_ingestion.py  data_transformation.py  data_validation.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/data_schema/: schema.yaml
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: __init__.py
networksecurity/utils/main_utils/: utils.py
(+13 files in other folders)
